--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -27,12 +27,12 @@
     </div>
   </div>
 </section>
-<section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].portfolio.section | default: "portfolio_pastel" }}">
+<section class="bg-light page-section" id="pastel">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].portfolio.title | markdownify | default: "Pastel" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].portfolio.text | markdownify }}</h3>
+        <h2 class="section-heading text-uppercase">Pastel</h2>
+        <h3 class="section-subheading text-muted">Pastel art</h3>
       </div>
     </div>
     <div class="row">
@@ -55,12 +55,12 @@
     </div>
   </div>
 </section>
-<section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].portfolio.section | default: "portfolio_pencil" }}">
+<section class="bg-light page-section" id="pencil">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].portfolio.title | markdownify | default: "Pencil" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].portfolio.text | markdownify }}</h3>
+        <h2 class="section-heading text-uppercase">"Pencil"</h2>
+        <h3 class="section-subheading text-muted">Pencil drawings</h3>
       </div>
     </div>
     <div class="row">
@@ -83,12 +83,12 @@
     </div>
   </div>
 </section>
-<section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].portfolio.section | default: "portfolio_watercolour" }}">
+<section class="bg-light page-section" id="Watercolour">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].portfolio.title | markdownify | default: "Watercolour" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].portfolio.text | markdownify }}</h3>
+        <h2 class="section-heading text-uppercase">Watercolour</h2>
+        <h3 class="section-subheading text-muted">Watercolour art</h3>
       </div>
     </div>
     <div class="row">
