--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="row">
-	{% for project in site.portfolio_pastel %}
+	{% for project in site.pastel %}
       <div class="col-md-4 col-sm-6 portfolio-item">
         <a class="portfolio-link" data-toggle="modal" href="#p{{ forloop.index }}">
           <div class="portfolio-hover">
@@ -59,12 +59,12 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">"Pencil"</h2>
+        <h2 class="section-heading text-uppercase">Pencil</h2>
         <h3 class="section-subheading text-muted">Pencil drawings</h3>
       </div>
     </div>
     <div class="row">
-	{% for project in site.portfolio_pencil %}
+	{% for project in site.pencil %}
       <div class="col-md-4 col-sm-6 portfolio-item">
         <a class="portfolio-link" data-toggle="modal" href="#p{{ forloop.index }}">
           <div class="portfolio-hover">
@@ -92,7 +92,7 @@
       </div>
     </div>
     <div class="row">
-	{% for project in site.portfolio_watercolour %}
+	{% for project in site.watercolour %}
       <div class="col-md-4 col-sm-6 portfolio-item">
         <a class="portfolio-link" data-toggle="modal" href="#p{{ forloop.index }}">
           <div class="portfolio-hover">
