--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,5 +3,8 @@ layout: default
 ---
 {% include navheader.html %}
 {% include portfolio_grid.html %}
+{% include pastel.html %}
+{% include pencil.html %}
+{% include watercolour.html %}
 {% include about.html %}
 {% include contact.html %}
