--- a/_includes/pencil.html
+++ b/_includes/pencil.html
@@ -1,14 +1,14 @@
 <!-- Portfolio Grid -->
-<section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].portfolio.section | default: "portfolio" }}">
+<section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].pencil.section | default: "pencil" }}">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].portfolio.title | markdownify | default: "Portfolio" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].portfolio.text | markdownify }}</h3>
+        <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].pencil.title | markdownify | default: "Pencil" }}</h2>
+        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].pencil.text | markdownify }}</h3>
       </div>
     </div>
     <div class="row">
-	{% for project in site.portfolio %}
+	{% for project in site.pencil %}
       <div class="col-md-4 col-sm-6 portfolio-item">
         <a class="portfolio-link" data-toggle="modal" href="#p{{ forloop.index }}">
           <div class="portfolio-hover">
