--- a/_includes/pastel.html
+++ b/_includes/pastel.html
@@ -1,5 +1,5 @@
 <!-- Portfolio Grid -->
-<section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].pastel.section | default: "pastel" }}">
+<section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].portfolio.section | default: "pastel" }}">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
