--- a/_includes/watercolour.html
+++ b/_includes/watercolour.html
@@ -1,5 +1,5 @@
 <!-- Portfolio Grid -->
-<section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].watercolour.section | default: "watercolour" }}">
+<section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].portfolio.section | default: "watercolour" }}">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
