--- a/_includes/modalswatercolour.html
+++ b/_includes/modalswatercolour.html
@@ -1,8 +1,8 @@
 <!-- Portfolio Modals -->
-{% for project in site.portfolio %}
+{% for project in site.watercolour %}
 <div
   class="portfolio-modal modal fade"
-  id="portfolio{{ forloop.index }}"
+  id="watercolour{{ forloop.index }}"
   tabindex="-1"
   role="dialog"
   aria-hidden="true"
