--- a/_includes/modalspastel.html
+++ b/_includes/modalspastel.html
@@ -1,8 +1,8 @@
 <!-- Portfolio Modals -->
-{% for project in site.portfolio %}
+{% for project in site.pastel %}
 <div
   class="portfolio-modal modal fade"
-  id="portfolio{{ forloop.index }}"
+  id="pastel{{ forloop.index }}"
   tabindex="-1"
   role="dialog"
   aria-hidden="true"
