--- a/_includes/modalspencil.html
+++ b/_includes/modalspencil.html
@@ -1,8 +1,8 @@
 <!-- Portfolio Modals -->
-{% for project in site.portfolio %}
+{% for project in site.pencil %}
 <div
   class="portfolio-modal modal fade"
-  id="portfolio{{ forloop.index }}"
+  id="pencil{{ forloop.index }}"
   tabindex="-1"
   role="dialog"
   aria-hidden="true"
