--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">
           {{ site.data.sitetext[site.locale].contact.title | markdownify | default: Contact Us }}</h2>
-        <h3 class="section-subheading text-muted"><a href="mailto:{{ site.email }}?subject=More information please!">{{ site.email }}</a></h3>
+        <h3 class="section-subheading text-muted"><a href="mailto:{{ site.email }}?subject=DSY ART Contact Me">{{ site.email }}</a></h3>
       </div>
     </div>
   </div>
