--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">
-          {{ site.data.sitetext[site.locale].contact.title | markdownify | default: Contact Us }}</h2>
+          {{ site.data.sitetext[site.locale].contact.title | markdownify | default: Contact Me }}</h2>
         <h3 class="section-subheading text-muted"><a href="mailto:{{ site.email }}?subject=DSY ART Contact Me">{{ site.email }}</a></h3>
       </div>
     </div>
